[gd_scene load_steps=47 format=2]

[ext_resource path="res://sprites/inimigos/80s/mumia/38.png" type="Texture" id=1]
[ext_resource path="res://scripts/inimigos/mumia.gd" type="Script" id=2]
[ext_resource path="res://sprites/inimigos/80s/mumia/34.png" type="Texture" id=3]
[ext_resource path="res://sprites/inimigos/80s/mumia/29.png" type="Texture" id=4]
[ext_resource path="res://sprites/inimigos/80s/mumia/30.png" type="Texture" id=5]
[ext_resource path="res://sprites/efeitos_jogo/2DLight.png" type="Texture" id=6]
[ext_resource path="res://sprites/inimigos/80s/mumia/28.png" type="Texture" id=7]
[ext_resource path="res://sprites/inimigos/80s/mumia/31.png" type="Texture" id=8]
[ext_resource path="res://sprites/inimigos/80s/mumia/26.png" type="Texture" id=9]
[ext_resource path="res://sprites/inimigos/80s/mumia/33.png" type="Texture" id=10]
[ext_resource path="res://sprites/inimigos/80s/mumia/27.png" type="Texture" id=11]
[ext_resource path="res://sprites/inimigos/80s/mumia/32.png" type="Texture" id=12]
[ext_resource path="res://sprites/inimigos/80s/mumia/36.png" type="Texture" id=13]
[ext_resource path="res://sprites/inimigos/80s/mumia/37.png" type="Texture" id=14]
[ext_resource path="res://sprites/inimigos/80s/mumia/25.png" type="Texture" id=15]
[ext_resource path="res://sprites/inimigos/80s/mumia/35.png" type="Texture" id=16]
[ext_resource path="res://sprites/inimigos/80s/mumia/4.png" type="Texture" id=17]
[ext_resource path="res://sprites/inimigos/80s/mumia/6.png" type="Texture" id=18]
[ext_resource path="res://sprites/inimigos/80s/mumia/7.png" type="Texture" id=19]
[ext_resource path="res://sprites/inimigos/80s/mumia/19.png" type="Texture" id=20]
[ext_resource path="res://sprites/inimigos/80s/mumia/23.png" type="Texture" id=21]
[ext_resource path="res://sprites/inimigos/80s/mumia/13.png" type="Texture" id=22]
[ext_resource path="res://sprites/inimigos/80s/mumia/2.png" type="Texture" id=23]
[ext_resource path="res://sprites/inimigos/80s/mumia/18.png" type="Texture" id=24]
[ext_resource path="res://sprites/inimigos/80s/mumia/17.png" type="Texture" id=25]
[ext_resource path="res://sprites/inimigos/80s/mumia/21.png" type="Texture" id=26]
[ext_resource path="res://sprites/inimigos/80s/mumia/5.png" type="Texture" id=27]
[ext_resource path="res://sprites/inimigos/80s/mumia/14.png" type="Texture" id=28]
[ext_resource path="res://sprites/inimigos/80s/mumia/8.png" type="Texture" id=29]
[ext_resource path="res://sprites/inimigos/80s/mumia/9.png" type="Texture" id=30]
[ext_resource path="res://sprites/inimigos/80s/mumia/12.png" type="Texture" id=31]
[ext_resource path="res://sprites/inimigos/80s/mumia/3.png" type="Texture" id=32]
[ext_resource path="res://sprites/inimigos/80s/mumia/16.png" type="Texture" id=33]
[ext_resource path="res://sprites/inimigos/80s/mumia/24.png" type="Texture" id=34]
[ext_resource path="res://sprites/inimigos/80s/mumia/20.png" type="Texture" id=35]
[ext_resource path="res://sprites/inimigos/80s/mumia/15.png" type="Texture" id=36]
[ext_resource path="res://sprites/inimigos/80s/mumia/11.png" type="Texture" id=37]
[ext_resource path="res://sprites/inimigos/80s/mumia/10.png" type="Texture" id=38]
[ext_resource path="res://sprites/inimigos/80s/mumia/22.png" type="Texture" id=39]
[ext_resource path="res://sprites/inimigos/80s/mumia/1.png" type="Texture" id=40]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.18439, 5.46368 )

[sub_resource type="Animation" id=2]
resource_name = "andando"
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("rotacao/sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 15 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 12 ), ExtResource( 10 ), ExtResource( 3 ), ExtResource( 16 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "nascimento"
length = 2.3
tracks/0/type = "value"
tracks/0/path = NodePath("rotacao/sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 40 ), ExtResource( 23 ), ExtResource( 32 ), ExtResource( 17 ), ExtResource( 27 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 38 ), ExtResource( 37 ), ExtResource( 31 ), ExtResource( 22 ), ExtResource( 28 ), ExtResource( 36 ), ExtResource( 33 ), ExtResource( 25 ), ExtResource( 24 ), ExtResource( 20 ), ExtResource( 35 ), ExtResource( 26 ), ExtResource( 39 ), ExtResource( 21 ), ExtResource( 34 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "vazio"

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 15.3313, 7.59486 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 119.972, 80.0741 )

[node name="mumia" type="KinematicBody2D"]
scale = Vector2( 0.7, 0.7 )
z_index = 5
collision_layer = 2
collision_mask = 105
script = ExtResource( 2 )

[node name="shape" type="CollisionShape2D" parent="."]
light_mask = 32
position = Vector2( -0.20489, 7.51068 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.574524, 0.928074 )
scale = Vector2( 0.535961, 0.429895 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/andando = SubResource( 2 )
anims/nascimento = SubResource( 3 )
anims/vazio = SubResource( 4 )

[node name="FloorDetectorLeft" type="RayCast2D" parent="."]
position = Vector2( -7.71693, 2.66585 )
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 64

[node name="FloorDetectorRight" type="RayCast2D" parent="."]
position = Vector2( 7.43631, 1.96431 )
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 64

[node name="PlatformDetector" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 15 )

[node name="colidir_com_player" type="Area2D" parent="." groups=["mumia"]]

[node name="shape" type="CollisionShape2D" parent="colidir_com_player"]
position = Vector2( -2.75003, 5.42575 )
shape = SubResource( 5 )

[node name="rotacao" type="Node2D" parent="."]

[node name="sprite" type="Sprite" parent="rotacao"]
position = Vector2( 2.7437, -3.07441 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 40 )
region_rect = Rect2( 0, 0, 20, 32 )

[node name="nascer" type="Area2D" parent="."]
visible = false

[node name="shape" type="CollisionShape2D" parent="nascer"]
shape = SubResource( 6 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 6 )
texture_scale = 0.1
energy = 2.0

[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="body_entered" from="colidir_com_player" to="." method="_on_enemy_body_entered"]
[connection signal="body_entered" from="nascer" to="." method="_on_nascer_body_entered"]
